Fix: 디테일 페이지 메시지 overflow 되지않도록

--- a/static/css/detail_birthday_page.css
+++ b/static/css/detail_birthday_page.css
@@ -205,6 +205,8 @@
 .message__message{
     font-weight:300;
     margin-left: 4rem;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 .message__nickname-delete-btn {
